# std_repo

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
